--- a/cocli/web/_includes/layout.njk
+++ b/cocli/web/_includes/layout.njk
@@ -72,7 +72,7 @@
             <a href="/" class="navbar-brand">cocli Dashboard</a>
             <div class="navbar-links">
                 <a href="/" class="nav-link">Dashboard</a>
-                <a href="/config" class="nav-link">Config</a>
+                <a href="/config/" class="nav-link">Config</a>
                 <a href="/kml-viewer.html" class="nav-link">Map Viewer</a>
                 <a href="https://turboheat.net" class="nav-link">Turboship</a>
                 <a href="https://status.turboheat.net" class="nav-link">Turboheat</a>
