--- a/cocli/web/_includes/layout.njk
+++ b/cocli/web/_includes/layout.njk
@@ -18,7 +18,8 @@
             userPoolDomain: "{{ campaign.userPoolDomain }}",
             identityPoolId: "{{ campaign.identityPoolId }}",
             region: "{{ campaign.region }}",
-            commandQueueUrl: "{{ campaign.commandQueueUrl }}"
+            commandQueueUrl: "{{ campaign.commandQueueUrl }}",
+            googleMapsApiKey: "{{ campaign.googleMapsApiKey }}"
         };
     </script>
 </head>
