--- a/cocli/web/kml-viewer.njk
+++ b/cocli/web/kml-viewer.njk
@@ -1,3 +1,6 @@
+---
+permalink: /kml-viewer.html
+---
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,7 +17,7 @@
         .layer-item { margin-bottom: 5px; }
     </style>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwMXoSea-O43V02XWegH-zW_LcSV3etS8&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key={% if campaign.googleMapsApiKey %}{{ campaign.googleMapsApiKey }}{% else %}AIzaSyCwMXoSea-O43V02XWegH-zW_LcSV3etS8{% endif %}&callback=initMap">
     </script>
 </head>
 <body>
