--- a/cocli/tui/tui.css
+++ b/cocli/tui/tui.css
@@ -17,9 +17,13 @@ Screen {
 }
 
 .menu-item {
-    width: 1fr;
-    text-align: center;
+    width: auto;
+    padding: 0 2 0 1;
     color: #888888;
+}
+
+#menu-spacer {
+    width: 1fr;
 }
 
 .active-menu-item {
@@ -118,13 +122,55 @@ DataTable > .datatable--cursor {
     text-style: bold;
 }
 
-#info-table {
-    height: auto;
+/* Application Hub Layout */
+#app_sidebar {
+    width: 25;
+    border-right: tall #222222;
+    background: black;
 }
 
-/* Specialized Display Styles */
-.phone-number {
-    color: #009900;
+#app_recent_runs {
+    width: 35;
+    border-left: tall #222222;
+    background: black;
+}
+
+#app_main_content {
+    width: 1fr;
+    background: black;
+}
+
+.sidebar-title {
+    padding: 1 2;
+    color: #444444;
+    text-style: bold;
+}
+
+#status_header {
+    height: 3;
+    padding: 1 2;
+    background: #1a1a1a;
+    border-bottom: solid #222222;
+}
+
+#status_title {
+    width: auto;
+    margin-right: 2;
+    color: #ffffff;
+    text-style: bold;
+}
+
+#status_last_updated {
+    width: 1fr;
+    color: #888888;
+}
+
+#status_refresh_indicator {
+    width: auto;
+}
+
+#status_body {
+    padding: 1 2;
 }
 
 /* Search List Styling */
