--- a/cocli/tui/tui.css
+++ b/cocli/tui/tui.css
@@ -218,6 +218,34 @@ Footer > .footer--key {
     text-style: bold;
 }
 
+#op_header_row {
+    height: 3;
+    padding: 1 0;
+}
+
+#op_title {
+    width: auto;
+    color: #ffffff;
+    text-style: bold;
+}
+
+#op_status_indicator {
+    width: 1fr;
+    text-align: right;
+    padding-right: 2;
+}
+
+#op_description {
+    color: #888888;
+    margin-bottom: 1;
+}
+
+#op_last_run {
+    color: #444444;
+    text-style: italic;
+    margin-bottom: 1;
+}
+
 #op_content_area {
     height: auto;
     background: black;
