--- a/cocli/tui/tui.css
+++ b/cocli/tui/tui.css
@@ -320,3 +320,68 @@ Footer > .footer--key {
     border: solid #222222;
     padding: 0 1;
 }
+
+/* Queues Detail Styling */
+#queue_header {
+    height: 3;
+    padding: 1 0;
+    border-bottom: solid #222222;
+    margin-bottom: 1;
+}
+
+#queue_title {
+    width: auto;
+    color: #ffffff;
+    text-style: bold;
+}
+
+#queue_sync_indicator {
+    width: 1fr;
+    text-align: right;
+    padding-right: 2;
+}
+
+#queue_meta_pane {
+    margin-bottom: 2;
+}
+
+#queue_action_row {
+    height: 12;
+    margin-top: 2;
+    layout: horizontal;
+}
+
+.count-box {
+    width: 1fr;
+    height: 100%;
+    margin: 0 2;
+    padding: 2;
+    border: tall #222222;
+    align: center middle;
+    background: #050505;
+}
+
+.count-box:focus-within {
+    border: tall #00ff00;
+    background: #0a0a0a;
+}
+
+.count-label {
+    width: 100%;
+    text-align: center;
+    color: #444444;
+    text-style: bold;
+}
+
+.count-value {
+    width: 100%;
+    text-align: center;
+    color: #00ff00;
+    text-style: bold;
+    margin: 1 0;
+}
+
+.count-box Button {
+    width: 100%;
+    margin-top: 1;
+}
