--- a/cocli/tui/tui.css
+++ b/cocli/tui/tui.css
@@ -321,10 +321,11 @@ Footer > .footer--key {
     padding: 0 1;
 }
 
-/* Queues Detail Styling */
+/* Queues Detail Styling (Consistent with Company Detail Panels) */
 #queue_header {
     height: 3;
-    padding: 1 0;
+    padding: 1 2;
+    background: #1a1a1a;
     border-bottom: solid #222222;
     margin-bottom: 1;
 }
@@ -335,53 +336,34 @@ Footer > .footer--key {
     text-style: bold;
 }
 
-#queue_sync_indicator {
+#queue_counts_summary {
     width: 1fr;
     text-align: right;
     padding-right: 2;
+    color: #888888;
 }
 
-#queue_meta_pane {
-    margin-bottom: 2;
+#queue_sync_indicator {
+    width: auto;
 }
 
-#queue_action_row {
-    height: 12;
-    margin-top: 2;
+#queue_transform_grid {
     layout: horizontal;
-}
-
-.count-box {
-    width: 1fr;
-    height: 100%;
-    margin: 0 2;
-    padding: 2;
-    border: tall #222222;
-    align: center middle;
-    background: #050505;
-}
-
-.count-box:focus-within {
-    border: tall #00ff00;
-    background: #0a0a0a;
-}
-
-.count-label {
+    height: 1fr;
     width: 100%;
-    text-align: center;
-    color: #444444;
-    text-style: bold;
 }
 
-.count-value {
-    width: 100%;
-    text-align: center;
-    color: #00ff00;
-    text-style: bold;
-    margin: 1 0;
-}
-
-.count-box Button {
-    width: 100%;
+.props-list {
+    margin-left: 2;
     margin-top: 1;
+}
+
+.panel-header {
+    color: #444444; 
+    text-align: left;
+    text-style: bold;
+    width: 100%;
+    margin-bottom: 0;
+    padding-left: 1;
+    border-left: solid #222222;
 }
