--- a/cocli/tui/tui.css
+++ b/cocli/tui/tui.css
@@ -389,3 +389,21 @@ Footer > .footer--key {
     height: 1;
     width: 100%;
 }
+
+.panel-header-green {
+    color: #00ff00; 
+    text-align: left;
+    text-style: bold;
+    width: 100%;
+    margin-bottom: 0;
+    padding-left: 1;
+    border-left: solid #00ff00;
+}
+
+.model-name-label {
+    color: #666666;
+    text-style: italic;
+    width: 100%;
+    padding-left: 2;
+    margin-bottom: 0;
+}
